pages/components/ShowcaseItem/showcaseitem.module.css
.showcaseWrapper {
    backdrop-filter: contrast(0.8);
    padding: var(--small-pad);
    margin: var(--small-pad) 0;
    overflow: scroll;
    border-radius: var(--small-pad);
    max-height: var(--medium-width);    
    height: fit-content;
    
}

.showcaseWrapper > h3 {
    font-size: var(--large-font);

}

@media (max-width: 740px) {
    .showcaseWrapper {
        max-height: unset;
    }
  }

